# fOboromi

./: .gitmodules  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  pr-review.yml  release.yml  security.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/cpu/: cpu_manager.rs  mod.rs  unicorn_interface.rs
core/src/fs/: keys.rs  mod.rs  nca.rs  partition.rs  storage.rs
core/src/sys/: boot.rs  kernel.rs  mod.rs  process.rs  svc.rs
core/src/tests/: mod.rs  multicore_test.rs  run.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/gui/: gui.rs  mod.rs
