[workspace]
resolver = "3"
members = [
  "core",
  "gui",
]

[workspace.dependencies]
cc = "1.2"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
crossbeam-channel = "0.5"
egui = "0.33"
eframe = "0.33"
serde = "1.0"
thiserror = "2.0"
oboromi-core = { path = "core" }
oboromi-gui = { path = "gui" }
