[package]
name = "oboromi-gui"
version = "0.0.1"
edition = "2024"
authors = ["Nikilite"]
license = "MPL-2.0"
description = "oboromi emulator GUI frontend"

[dependencies]
oboromi-core = { path = "../core", default-features = false }
egui = { workspace = true }
eframe = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
image = "0.25.6"

[features]
default = []
trace = ["oboromi-core/trace"]

[[bin]]
name = "oboromi"
path = "src/main.rs"